--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,26 @@
-PyQt5>=5.15.0
-matplotlib>=3.7.0
-requests>=2.28.0
-Django>=4.2
-djangorestframework
-django-cors-headers
-gunicorn
-
+asgiref==3.11.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+coverage==7.10.6
+Django==6.0.1
+django-cors-headers==4.9.0
+django-recurrence==1.11.1
+djangorestframework==3.16.1
+gunicorn==25.0.1
+idna==3.11
+numpy==2.4.1
+packaging==26.0
+pandas==3.0.0
+pillow==12.1.0
+pyaml==25.7.0
+python-dateutil==2.9.0.post0
+python-decouple==3.3
+pytz==2025.2
+PyYAML==6.0.2
+reportlab==4.4.9
+requests==2.32.5
+setuptools==80.9.0
+six==1.17.0
+sqlparse==0.5.5
+tzdata==2025.3
+urllib3==2.6.3
